# healthApp

./: manage.py  pyproject.toml  sna
HealthFitness/: asgi.py  settings.py  urls.py  wsgi.py
medicalapp/: apps.py
medicalapp/migrations/: 0001_initial.py
